--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@fontsource/montserrat": "^5.2.6",
     "@fortawesome/fontawesome-free": "^7.0.0",
+    "@google-pay/button-react": "^3.2.1",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.3.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
