--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.13.1",
     "firebase": "^12.1.0",
     "fslightbox-react": "^1.8.0",
+    "js-cookie": "^3.0.5",
     "lightgallery": "^2.9.0-beta.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
